# tesi-magistrale

./: .dir-locals.el  .gitignore  README.md  README.org  Tesi magistrale.bib  bibliography.bib  bibliography.yml  environment.yml  nanotubo.py  pyproject.toml  requirements.txt  thesis.typ
.helix/: config.toml  languages.toml
00_Al/00.PerfectCrystal/: fit.f90
00_Al/01.PhononDispersion/: INCAR  KPOINTS  phon.sh
00_Al/02.VibratingCrystal/: 3-point_derivative.py  free.s4.sh  start.sh
00_Al/03.Anharmonic/: simultaneous.sh
01_tutorial-ase/02_manipulating_atoms/: NiH20.traj
01_tutorial-ase/03_h20_structure/: opt.traj
01_tutorial-mlp-water/: tutorial_2023-12-20.ipynb  tutorial_2023-12-20.ipynb.bak
01_tutorial-mlp-water/00_water_energy_forces/: 00_water_energy_forces.py
01_tutorial-mlp-water/01_water_geometry_optimization/: slurm-206760.out
01_tutorial-mlp-water/02_water_full_geometry_optimization/: log.lammps
02_lammps_water/01_water_molecule/: 02_vib.py  03_analysis.py  H2O_delta=0.0001_summary.txt  H2O_delta=0.1_summary.txt
02_template/: mace.org  n2p2.org
02_water/: .dir-locals.el  01.9_analysis.py
02_water/01.1_molecule_mace_dispersione_more_vacuum/: 01_optimize.py  H2O_delta=0.01_summary.txt  H2O_delta=0.1_summary.txt  H2O_delta=1.0_summary.txt  final.xyz
02_water/01.2_molecule_mace_dispersion_gpu/: energy.py
02_water/01.3_molecule_mace_large_dispersion/: H2O_delta=0.01_summary.txt  H2O_delta=0.1_summary.txt  H2O_delta=1.0_summary.txt  energy.sh  final.xyz  slurm-232961.out
02_water/01_molecule/: 01.9_analysis.py  (+2 more)
2024-01-11_h2o_vibrational_modes/: h2o.txt  vib.0.traj  vib.1.traj  vib.4.traj  vib.5.traj  vib.8.traj
diario/: .dir-locals.el
presentazione/: .gitattributes  Makefile  presentazione.typ
script/: .dir-locals.el  README  slurm_template.sh
simulazioni/: .dir-locals.el  pyproject.ibisco.toml
strutture/: brillouin_zones.py
thesis/: main.typ
tutorial-ase/: N2Cu.traj  myatoms.traj  nwchem.nwi
tutorial-fine-tuning/: analysis.py
tutorial-mlp-water/: .dir-locals.el  Untitled.ipynb  rdf-exp
(+5577 files in other folders)
