[tool.poetry]
package-mode = false
name = "tesi-magistrale"
description = "Tesi magistrale di Mariano Mollo"
authors = ["Mariano Mollo <marian.mollo@studenti.unina.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.8"
ase = {git = "https://gitlab.com/ase/ase.git"}
# mace-torch = "^0.3.4"
# torch-dftd = "^0.4.0"
phonopy = "^2.21.2"
seekpath = "^2.1.0"
marimo = "^0.6.0"
pandas = "^2.2.0"
polars = "^0.20.13"
jupyterlab = "^4.1.6"
tornado = "^6.4"
mdanalysis = "^2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
